<resources>
    <string name="app_name">CookCompass</string>
    <string name="log_in">Log In</string>
    <string name="please_input_your_account">Please input your account</string>
    <string name="register">Register</string>
    <string name="please_input_your_password">Please input your password</string>
    <string name="please_input_your_password_again">Please input your password again</string>
    <string name="search_hint">ingredients=apple; like>20;</string>
    <string name="search">Search</string>
    <string name="search_result">Roasted Chicken</string>
    <string name="sort_by_id">ID</string>
    <string name="sort_by_title">Title</string>
    <string name="sort_by_view">VIEW</string>
    <string name="sort_by_like">LIKE</string>
    <string name="title_Search">Search</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="email_address">Email Address:</string>
    <string name="format_country_admin_area">%1$s, %2$s</string>
    <string name="notification">Notification</string>
    <string name="theme">Theme:</string>
    <string name="search_sort">Sort</string>
    <string name="address">Address: </string>
    <string name="start_data_stream">Start Data Stream</string>
    <string name="placeholder_like">123</string>
    <string name="placeholder_view">456</string>
    <string name="like_count">like count</string>
    <string name="view_count">view count</string>
    <string name="sort_button_description">sort_by_desc</string>
    <string name="sort_ascending">Ascending</string>
    <string name="sort_descending">Descending</string>
</resources>